[project]
name = "intelligent-decision-making"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
   "langchain>=0.3.27",
   "langchain-google-genai>=2.1.12",
   "langchain-tavily>=0.2.11",
   "langgraph>=0.6.7",
   "python-dotenv>=1.1.1",
]
